--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,15 +42,14 @@
 
 	<div class="col-md-4 col-md-offset-4">
 		<div>
-			<p>Register Now
-			</p>
+			<p>Register Now</p> 
 		</div>
 		<div class="form-group">
 			<form id="form1" method="post">
 				<input type="email" name="email" placeholder="E-mail" required="" class="form-control"><br/>
 				<input type="text" name="username" placeholder="Username" required="" class="form-control"><br/>
 				<input type="password" name="password" placeholder="Password" required="" class="form-control"><br/>
-				<input type="password" name="passwordConf" placeholder="Confirm Password" required="" class="form-control"><br/>
+				<input type="password" name="passwordConfirm" placeholder="Confirm Password" required="" class="form-control"><br/>
 				<input type="submit" value="Register" class="btn btn-success">
 			</form>
 		</div>
