--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,7 @@
 <head>
 	<title>Authentication</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="./css/main.css">
 
@@ -23,15 +22,7 @@
 					success: (response) => {
 						$('#form1')[0].reset();
 
-						document.getElementById("check").innerHTML=response.Success;
-         					setTimeout( () => {
-         						document.getElementById("check").innerHTML="";
-         					},3000);
-         					if (response.Success=="You are registered,You can login now.") {
-         						document.getElementById("aa").click();
-         					};
-         				},
-         				error: () => {
+						document.getElementById("aa").click();
          				}
          			})
 			});
@@ -40,7 +31,7 @@
 </head>
 <body>
 
-	<div class="col-md-4 col-md-offset-4">
+	<div id="div1">
 		<div>
 			<p>Register Now</p> 
 		</div>
